# dw-extract-pdf-data

./: .gitignore  pyproject.toml
src/: extraction.py
